edit private chats, more role restrictions
